--- a/WebContent/principalAdmin.xhtml
+++ b/WebContent/principalAdmin.xhtml
@@ -12,7 +12,7 @@
 	    
 	</ui:define>
 	<ui:define name="cuerpo">
-		<h:form>
+		<h:form id="form-admin">
 		    <p:panelGrid>
 		    	<p:row>
 		    		<p:column><h:outputText value="Id"/></p:column>
