--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -55,7 +55,7 @@
 	    
 	    <p:panel>
 		    <div>
-		    	<a href="registro.xhtml">Registrarse</a>
+		    	<a id="linkRegistro" href="registro.xhtml">Registrarse</a>
 		    </div>
 		</p:panel>
 	</ui:define>
