--- a/WebContent/registro.xhtml
+++ b/WebContent/registro.xhtml
@@ -12,7 +12,7 @@
 	    
 	</ui:define>
 	<ui:define name="cuerpo">
-		<h:form>
+		<h:form id="form-registro">
 	   		<p:panelGrid>
 		    	<p:row>
 		    		<p:column>
@@ -84,6 +84,7 @@
 		    		
 		    		<p:column>
 		    			<p:commandButton
+		    			id="registrar"
 			   			value="Registro"
 		   				action="#{controller.registrar()}"
 		   				update="@form"/>
