--- a/WebContent/registro.xhtml
+++ b/WebContent/registro.xhtml
@@ -84,7 +84,7 @@
 		    		
 		    		<p:column>
 		    			<p:commandButton
-			   			value="Registro"
+			   			value="#{msgs.linkRegistroLogin}"
 		   				action="#{controller.registrar()}"
 		   				update="@form"/>
 		    		</p:column>
