--- a/WebContent/principalAdmin.xhtml
+++ b/WebContent/principalAdmin.xhtml
@@ -45,7 +45,7 @@
 		    	</p:row>
 		    	
 		    	<p:row>
-		    		<p:column><h:outputText value="#{msgs.rpassPrincipal}"/></p:column>
+		    		<p:column><h:outputText value="#{msgs.rPassPrincipal}"/></p:column>
 		    		<p:column><p:password value="#{controller.passwordConfirmacion}"/></p:column>
 		    	</p:row>
 		    	
