Id para el formulario del usuario

--- a/WebContent/principalUsuario.xhtml
+++ b/WebContent/principalUsuario.xhtml
@@ -12,7 +12,7 @@
 	    
 	</ui:define>
 	<ui:define name="cuerpo">
-		<h:form>
+		<h:form id="form-usuario">
 		    <p:panelGrid>
 		    	<p:row>
 		    		<p:column><h:outputText value="#{msgs.idPrincipal}"/></p:column>
