--- a/WebContent/listaTareasHoy.xhtml
+++ b/WebContent/listaTareasHoy.xhtml
@@ -15,7 +15,9 @@
 	    <h:form id="form-usuarios">
 			<p:panel header="#{msgs.tituloListaUsuarios}">
 				<p:dataTable id="tablalistado" var="var"
-					value="#{controller.tareas}" border="1">
+					value="#{controller.tareas}" border="1"
+					selectionMode="single" selection="#{controller.seleccionada}"
+					rowKey="#{var.id}">
 					<p:column id="headerTitulo" headerText="#{msgs.tituloTarea}">
 						<h:outputText id="filaNombre" value="#{var.title}" />
 					</p:column>
@@ -36,6 +38,12 @@
 						</h:outputText>
 					</p:column>
 				</p:dataTable>
+				<div>
+					<p:commandButton id="eliminar" process="@form"
+						value="#{msgs.botonFinalizarTarea}" 
+						action="#{controller.finalizarTarea()}"
+						update="@form" />
+				</div>
 			</p:panel>
 		</h:form>
 	</ui:define>
