--- a/WebContent/listaTareasHoy.xhtml
+++ b/WebContent/listaTareasHoy.xhtml
@@ -11,12 +11,26 @@
 	<ui:define name="header">
 	   
 	</ui:define>
-	<ui:define name="cuerpo">	
+	
+	<ui:define name="cuerpo">
+		
+		<style type="text/css">
+	 		.colorRed{
+	 			background: #FF2D00;
+	 			color: #000000;
+	 		}
+	 		
+	 		.colorNormal{
+	 			color: #000000;
+	 		}
+		</style>
+		
 	    <h:form id="form-usuarios">
 			<p:panel header="#{msgs.tituloListaUsuarios}">
 				<p:dataTable id="tablalistado" var="var"
 					value="#{controller.tareas}" border="1"
 					selectionMode="single" selection="#{controller.seleccionada}"
+					rowStyleClass="#{controller.retrasada(var) ? 'colorRed' : 'colorNormal'}"
 					rowKey="#{var.id}" >
 					<p:column id="headerTitulo" headerText="#{msgs.tituloTarea}">
 						<h:outputText id="filaNombre" value="#{var.title}"/>
