--- a/WebContent/listaTareasSemana.xhtml
+++ b/WebContent/listaTareasSemana.xhtml
@@ -11,12 +11,25 @@
 	<ui:define name="header">
 	    Add your header here or delete to use the default
 	</ui:define>
-	<ui:define name="cuerpo">	
+	<ui:define name="cuerpo">
+	
+		<style type="text/css">
+	 		.colorRed .category{
+	 			background: #FF2D00;
+	 			color: #000000;
+	 		}
+	 		
+	 		.colorNormal{
+	 			color: #000000;
+	 		}
+		</style>
+		
 	    <h:form id="form-usuarios">
 			<p:panel header="#{msgs.tituloListaUsuarios}">
 				<p:dataTable id="tablalistado" var="var"
 					value="#{controller.tareas}" border="1"
 					selectionMode="single" selection="#{controller.seleccionada}"
+					rowStyleClass="#{controller.retrasada(var) ? 'colorRed' : 'colorNormal'}"
 					rowKey="#{var.id}">
 					<p:column id="headerTitulo" headerText="#{msgs.tituloTarea}"
 						sortBy="#{var.title}">
@@ -27,14 +40,15 @@
 						<h:outputText value="#{var.comments}" />
 					</p:column>
 					
-					<p:column id="headerCategory" headerText="#{msgs.categoriaTarea}">
+					<p:column styleClass="category" id="headerCategory"
+								 headerText="#{msgs.categoriaTarea}">
 						<h:outputText value="#{var.categoryId}" />
 					</p:column>
 
 					<p:column id="headerFecha" headerText="#{msgs.fechaTarea}"
 						sortBy="#{var.planned}">
 						<h:outputText id="filaStatus" value="#{var.planned}">
-							<f:convertDateTime pattern="dd/MM/yyyy" />
+							<f:convertDateTime type="both" pattern="dd-MM-yyyy" />
 						</h:outputText>
 					</p:column>
 				</p:dataTable>
