Añadir y modificar tarea + cosas + todo junto

--- a/WebContent/listaTareasInbox.xhtml
+++ b/WebContent/listaTareasInbox.xhtml
@@ -29,7 +29,7 @@
 	 		}
 		</style>
 	
-		<h:form>
+		<h:form id="form-listadoInbox">
 			<p:panel header="" style="margin-bottom:10px;">
 				<h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5">
 			        <h:outputText value="#{msgs.filtrarTodas}: " />
