--- a/WebContent/user/listaTareasInbox.xhtml
+++ b/WebContent/user/listaTareasInbox.xhtml
@@ -7,7 +7,7 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
 
-<ui:composition template="templates/template-usuario.xhtml">
+<ui:composition template="/templates/template-usuario.xhtml">
 	<ui:define name="header">
 	    Add your header here or delete to use the default
 	
@@ -54,30 +54,31 @@
 								   #{controller.finalizada(var) ? 'colorVerde' : 'colorNormal'}"
 					rowKey="#{var.id}">
 					<p:column filterBy="#{var.title}" id="headerTitulo" headerText="#{msgs.tituloTarea}"
-						filterMatchMode="contains">
+						filterMatchMode="contains"  style="text-align:center">
 						<h:outputText id="filaNombre" value="#{var.title}" />
 					</p:column>
 
 					<p:column id="headerComments" headerText="#{msgs.commentTarea}"
-						 sortBy="#{var.comments}">
+						 sortBy="#{var.comments}" style="text-align:center">
 						<h:outputText value="#{var.comments}" styleClass="#{'colored'}"/>
 					</p:column>
 					
 					<p:column id="headerCategory" headerText="#{msgs.categoriaTarea}"
-						 sortBy="#{var.categoryId}">
+						 sortBy="#{var.categoryId}" style="text-align:center">
 						<h:outputText value="#{var.categoryId}" />
 					</p:column>
 
 					<p:column id="headerFecha" headerText="#{msgs.fechaTarea}"
-						sortBy="#{var.planned}">
+						sortBy="#{var.planned}" style="text-align:center">
 						<h:outputText id="filaStatus" value="#{var.planned}">
-							<f:convertDateTime pattern="dd/MM/yyyy" />
+							<f:convertDateTime pattern="dd/MM/yyyy" timeZone="CET"/>
 						</h:outputText>
 					</p:column>
 					
-					<p:column id="headerFechaFin" headerText="#{msgs.fechaFin}">
+					<p:column id="headerFechaFin" headerText="#{msgs.fechaFin}"
+								 style="text-align:center">
 						<h:outputText id="filaFechaFin" value="#{var.finished}">
-							<f:convertDateTime pattern="dd/MM/yyyy" />
+							<f:convertDateTime pattern="dd/MM/yyyy" timeZone="CET" />
 						</h:outputText>
 					</p:column>
 				</p:dataTable>
