--- a/WebContent/user/listaTareasSemana.xhtml
+++ b/WebContent/user/listaTareasSemana.xhtml
@@ -7,7 +7,7 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
 
-<ui:composition template="templates/template-usuario.xhtml">
+<ui:composition template="/templates/template-usuario.xhtml">
 	<ui:define name="header">
 	    Add your header here or delete to use the default
 	</ui:define>
@@ -32,23 +32,24 @@
 					rowStyleClass="#{controller.retrasada(var) ? 'colorRed' : 'colorNormal'}"
 					rowKey="#{var.id}">
 					<p:column id="headerTitulo" headerText="#{msgs.tituloTarea}"
-						sortBy="#{var.title}">
+						sortBy="#{var.title}" style="text-align:center">
 						<h:outputText id="filaNombre" value="#{var.title}" />
 					</p:column>
 
-					<p:column id="headerComentarios" headerText="#{msgs.commentTarea}">
+					<p:column id="headerComentarios" headerText="#{msgs.commentTarea}"
+					 		style="text-align:center">
 						<h:outputText value="#{var.comments}" />
 					</p:column>
 					
 					<p:column styleClass="category" id="headerCategory"
-								 headerText="#{msgs.categoriaTarea}">
+								 headerText="#{msgs.categoriaTarea}" style="text-align:center">
 						<h:outputText value="#{var.categoryId}" />
 					</p:column>
 
 					<p:column id="headerFecha" headerText="#{msgs.fechaTarea}"
-						sortBy="#{var.planned}">
+						sortBy="#{var.planned}" style="text-align:center">
 						<h:outputText id="filaStatus" value="#{var.planned}">
-							<f:convertDateTime type="both" pattern="dd-MM-yyyy" />
+							<f:convertDateTime pattern="dd/MM/yyyy" timeZone="CET"/>
 						</h:outputText>
 					</p:column>
 				</p:dataTable>
