--- a/WebContent/user/principalUsuario.xhtml
+++ b/WebContent/user/principalUsuario.xhtml
@@ -13,6 +13,7 @@
 	</ui:define>
 	<ui:define name="cuerpo">		
 		<h:form id="form-usuario">
+			<p:messages for="form-usuario" globalOnly="true" />
 			<p:panel header="#{msgs.headerCheck}" style="margin-bottom:10px;">
 				<h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5">
 					<h:outputText value="#{msgs.tituloOpcion2User}: " />
