--- a/WebContent/user/editarTarea.xhtml
+++ b/WebContent/user/editarTarea.xhtml
@@ -38,6 +38,18 @@
 						</p:inputText>
 					</p:column>
 				</p:row>
+				
+				<p:row>
+					<p:column>
+		    			#{msgs.tercerCampoTarea}
+		    		</p:column>
+
+					<p:column>
+						<p:inputText id="categoriaTarea"
+							value="#{controller.seleccionada.categoryId}">
+						</p:inputText>
+					</p:column>
+				</p:row>
 
 				<p:row>
 					<p:column>
