--- a/WebContent/admin/listaUsuarios.xhtml
+++ b/WebContent/admin/listaUsuarios.xhtml
@@ -53,7 +53,7 @@
 					</p:commandButton>
 					
 					<p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
-				        <p:commandButton value="#{msgs.botonSi}" styleClass="ui-confirmdialog-yes" icon="ui-icon-check"/>
+				        <p:commandButton id="si" value="#{msgs.botonSi}" styleClass="ui-confirmdialog-yes" icon="ui-icon-check"/>
 				        <p:commandButton value="#{msgs.botonNo}" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
     				</p:confirmDialog>
 				</div>
